--- a/docs/src/drivers/gs2.adoc
+++ b/docs/src/drivers/gs2.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:gs2-vfd-driver]]
-= GS2 VFD Driver(((GS2 VFD Driver)))
+= GS2 VFD Driver
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -10,6 +10,7 @@
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
 
+(((GS2 VFD Driver)))
 This is a non-realtime HAL program for the GS2 series of VFDs at Automation Direct. footnote:[In Europe the equivalent can be found under the brand name Omron.]
 
 This component is loaded using the halcmd "loadusr" command:
