--- a/docs/src/gui/ngcgui.adoc
+++ b/docs/src/gui/ngcgui.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:ngcgui]]
-= NGCGUI(((NGCGUI)))
+= NGCGUI
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -15,6 +15,7 @@ image::images/ngcgui.png[align="center"]
 
 == Overview
 
+(((NGCGUI)))
 * 'NGCGUI' is a Tcl application to work with subroutines. It allows you to
   have a conversational interface with LinuxCNC. You can organize the
   subroutines in the order you need them to run and concatenate the
