--- a/docs/src/common/linux-faq.adoc
+++ b/docs/src/common/linux-faq.adoc
@@ -2,13 +2,16 @@
 :toc:
 
 [[cha:linux-faq]]
-= Linux FAQ(((Linux FAQ)))
+= Linux FAQ
 
+(((Linux FAQ)))
 These are some basic Linux commands and techniques for new to Linux
 users. More complete information can be found on the web or by using
 the man pages.
 
-== Automatic Login(((Automatic Login)))
+== Automatic Login
+
+(((Automatic Login)))
 
 === Debian
 
@@ -70,8 +73,9 @@ make sure your right clicking on a blank area or a directory not a file name.
 Most OS's have the terminal as a menu item, usually in Accessories.
 
 [[faq:man-pages]]
-== Man Pages(((Man Pages)))
+== Man Pages
 
+(((Man Pages)))
 A man page (short for manual page) is a form of software documentation
 usually found on a Unix or Unix-like operating system like Linux.
 
@@ -154,8 +158,9 @@ pwd
 ----
 
 [[faq:cd]]
-=== Changing Directories(((Changing Directories)))(((cd)))
+=== Changing Directories
 
+(((Changing Directories)))(((cd)))
 To change the working directory to the one one level up, i.e., the parent directory, in the terminal window type:
 
 ----
