--- a/docs/src/config/ini-homing.adoc
+++ b/docs/src/config/ini-homing.adoc
@@ -123,8 +123,9 @@ They are defined in an [JOINT_n] section of the INI file.
 [NOTE]
 Any other combinations may result in an error.
 
-=== HOME_SEARCH_VEL(((HOME SEARCH VEL)))
+=== HOME_SEARCH_VEL
 
+(((HOME SEARCH VEL)))
 This variable has units of machine-units per second.
 
 The default value is zero. A value of zero causes LinuxCNC to assume that
@@ -140,8 +141,9 @@ The amount of overshoot depends on the speed.
 If it is too high, the joint might overshoot enough to hit a limit switch or crash into the end of travel.
 On the other hand, if HOME_SEARCH_VEL is too low, homing can take a long time.
 
-=== HOME_LATCH_VEL(((HOME LATCH VEL)))
+=== HOME_LATCH_VEL
 
+(((HOME LATCH VEL)))
 This variable has units of machine-units per second.
 
 Specifies the speed and direction that LinuxCNC uses when it makes its final accurate determination of the home switch (if present) and index pulse location (if present).
@@ -163,8 +165,9 @@ HOME_OFFSET to the HOME position. If the HOME_FINAL_VEL is missing from
 the INI file, then the maximum joint speed is used to make this move.
 The value must be a positive number.
 
-=== HOME_IGNORE_LIMITS(((HOME IGNORE LIMITS)))
+=== HOME_IGNORE_LIMITS
 
+(((HOME IGNORE LIMITS)))
 Can hold the values YES / NO. The default value for this parameter is NO.
 This flag determines whether LinuxCNC will ignore the limit switch input for this joint while homing.
 This setting will not ignore limit inputs for other joints.
@@ -172,8 +175,9 @@ If you do not have a separate home switch set this to YES and connect the limit 
 LinuxCNC will ignore the limit switch input for this joint while homing.
 To use only one input for all homing and limits you will have to block the limit signals of the joints not homing in HAL and home one joint at a time.
 
-=== HOME_USE_INDEX(((HOME USE INDEX)))
+=== HOME_USE_INDEX
 
+(((HOME USE INDEX)))
 Specifies whether or not there is an index pulse.
 If the flag is true (HOME_USE_INDEX = YES), LinuxCNC will latch on the rising edge of the index pulse.
 If false, LinuxCNC will latch on either the rising or falling edge of the home switch (depending on the signs of HOME_SEARCH_VEL and HOME_LATCH_VEL).
@@ -182,14 +186,16 @@ The default value is NO.
 [NOTE]
 HOME_USE_INDEX requires connections in your HAL file to `joint.n.index-enable` from the `encoder.n.index-enable`.
 
-=== HOME_INDEX_NO_ENCODER_RESET(((HOME INDEX NO ENCODER RESET)))
+=== HOME_INDEX_NO_ENCODER_RESET
 
+(((HOME INDEX NO ENCODER RESET)))
 Default is NO.
 Use YES if the encoder used for this joint does not reset its counter when an index pulse is detected after assertion of the joint index_enable HAL pin.
 Applicable only for HOME_USE_INDEX = YES.
 
-=== HOME_OFFSET(((HOME OFFSET)))
+=== HOME_OFFSET
 
+(((HOME OFFSET)))
 This defines the location of the origin zero point of the G53 machine coordinate system.
 It is the distance (offset), in joint units, from the machine origin to the home switch trip point or index pulse.
 After detecting the switch trip point/index pulse, LinuxCNC sets the joint coordinate position to HOME_OFFSET, thus defining the origin, which the soft limits references from.
@@ -198,8 +204,9 @@ The default value is zero.
 NOTE: The home switch location, as indicated by the HOME_OFFSET variable, can be inside or outside the soft limits.
 They will be shared with or inside the hard limit switches.
 
-=== HOME(((HOME)))
+=== HOME
 
+(((HOME)))
 The position that the joint will go to upon completion of the homing sequence.
 After detecting the home switch or home switch then index pulse (depending on configuration),
 and setting the coordinate of that point to HOME_OFFSET, LinuxCNC makes a move to HOME as the final step of the homing process.
@@ -212,13 +219,15 @@ This final move will be made at the joint's maximum velocity unless HOME_FINAL_V
 The distinction between 'HOME_OFFSET' and 'HOME' is that 'HOME_OFFSET' first establishes the origin location and scale on the machine
 by applying the 'HOME_OFFSET' value to the location where home was found, and then 'HOME' says where the joint should move to on that scale.
 
-=== HOME_IS_SHARED(((HOME IS SHARED)))
+=== HOME_IS_SHARED
 
+(((HOME IS SHARED)))
 If there is not a separate home switch input for this joint, but a number of momentary switches wired to the same pin, set this value to 1 to prevent homing from starting if one of the shared switches is already closed.
 Set this value to 0 to permit homing even if the switch is already closed.
 
-=== HOME_ABSOLUTE_ENCODER(((HOME ABSOLUTE ENCODER)))
+=== HOME_ABSOLUTE_ENCODER
 
+(((HOME ABSOLUTE ENCODER)))
 Use for absolute encoders.  When a request is made to home the joint, the current joint position is set to the '[JOINT_n]HOME_OFFSET' value.
 
 The final move to the '[JOINT_n]HOME' position is optional according to the 'HOME_ABSOLUTE_ENCODER' setting:
@@ -236,8 +245,9 @@ A HOME_IS_SHARED setting is silently ignored.
 A request to rehome the joint is silently ignored.
 
 [[sec:homing-section]]
-=== HOME_SEQUENCE(((HOME SEQUENCE)))
+=== HOME_SEQUENCE
 
+(((HOME SEQUENCE)))
 Used to define a multi-joint homing sequence *HOME ALL* and enforce homing order (e.g., Z may not be homed if X is not yet homed).
 A joint may be homed after all joints with a lower (absolute value) HOME_SEQUENCE have already been homed and are at the HOME_OFFSET.
 If two joints have the same HOME_SEQUENCE, they may be homed at the same time.
@@ -307,18 +317,21 @@ One sequence, all joints synchronized
 [JOINT_2]HOME_SEQUENCE = -1
 ----
 
-=== VOLATILE_HOME(((VOLATILE HOME)))
+=== VOLATILE_HOME
 
+(((VOLATILE HOME)))
 If this setting is true, this joint becomes unhomed whenever the machine transitions into the OFF state.
 This is appropriate for any joint that does not maintain position when the joint drive is off.
 Some stepper drives, especially microstep drives, may need this.
 
-=== LOCKING_INDEXER(((LOCKING INDEXER)))
+=== LOCKING_INDEXER
 
+(((LOCKING INDEXER)))
 If this joint is a locking rotary indexer, it will unlock before homing, and lock afterward.
 
-=== Immediate Homing(((Immediate Homing)))
+=== Immediate Homing
 
+(((Immediate Homing)))
 If a joint does not have home switches or does not have a logical home position like a rotary joint and you want that joint to home at the current position when the "Home All" button is pressed in the AXIS GUI,
 then the following INI entries for that joint are needed.
 
@@ -334,8 +347,9 @@ HOME_SEQUENCE = 0 (or other valid sequence number)
 The default values for unspecified HOME_SEARCH_VEL, HOME_LATCH_VEL, HOME_USE_INDEX, HOME, and HOME_OFFSET are *zero*, so they may be omitted when requesting immediate homing.
 A valid HOME_SEQUENCE number should usually be included since omitting a HOME_SEQUENCE eliminates the joint from *HOME ALL* behavior as noted above.
 
-=== Inhibiting Homing(((Inhibiting Homing)))
+=== Inhibiting Homing
 
+(((Inhibiting Homing)))
 A HAL pin (motion.homing-inhibit) is provided to disallow homing initiation for both "Home All" and individual joint homing.
 
 Some systems take advantage of the provisions for synchronizing final joint homing moves as controlled by negative [JOINT_N]HOME_SEQUENCE= INI file items.
