--- a/docs/src/config/stepper-diagnostics.adoc
+++ b/docs/src/config/stepper-diagnostics.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:stepper-diagnostics]]
-= Stepper Diagnostics(((Stepper Diagnostics)))
+= Stepper Diagnostics
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -10,6 +10,7 @@
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
 
+(((Stepper Diagnostics)))
 If what you get is not what you expect many times you just got some
 experience. Learning from the experience increases your understanding
 of the whole. Diagnosing problems is best done by divide and conquer.
