--- a/docs/src/gcode/overview.adoc
+++ b/docs/src/gcode/overview.adoc
@@ -75,8 +75,9 @@ outside a comment may be in upper or lower case without changing the
 meaning of a line.
 
 [[sub:block-delete]]
-=== '/': Block Delete((('/' Block Delete)))
+=== '/': Block Delete
 
+((('/' Block Delete)))
 The optional block delete character the slash '/' when placed first on a line
 can be used by some user interfaces to skip lines of code when needed. In Axis
 the key combination Alt-m-/ toggles block delete on and off. When block delete
@@ -87,8 +88,9 @@ In AXIS, it is also possible to enable block delete with the following icon:
 .AXIS Block Delete Icon
 image:../gui/images/tool_blockdelete.png[]
 
-=== Line Number(((Line Number)))
+=== Line Number
 
+(((Line number)))
 A line number is the letter N followed by an unsigned integer,
 optionally followed by a period and another unsigned integer. For
 example, 'N1234' and 'N56.78' are valid line numbers. They may be
@@ -97,8 +99,9 @@ such usage. Line numbers may also be skipped, and that is normal
 practice. A line number is not required to be used, but must be in the
 proper place if used.
 
-=== Word(((Words)))
+=== Word
 
+(((Words)))
 A word is a letter other than N followed by a real value.
 
 Words may begin with any of the letters shown in the following Table.
@@ -140,28 +143,33 @@ not have the corresponding axis.
 |Z | Z axis of machine
 |===
 
-==== Parameters(((Parameters)))
+==== Parameters
 
+(((Parameters)))
 Parameters are identified with a "#" symbol in front of them. See <<sec:overview-parameters,Parameters Section>> below. 
 
-==== Subroutine Codes(((Subroutine Codes)))
+==== Subroutine Codes
 
+(((Subroutine Codes)))
 Also called 'o-codes' these provide program flow control (such as if-else logic and callable subroutines) and are covered fully at the page on <<cha:o-codes,o-Codes>> and also below in <<sub:subroutine-parameters,Subroutine Codes and Parameters>>.
 
 NOTE: o-codes are sometimes also called o-words. 
 
-==== Comments(((Comments)))
+==== Comments
 
+(((Comments)))
 Comments can be embedded in a line using parentheses () or for the remainder of a line using a semi-colon. There are also 'active' comments like MSG, DEBUG, etc. See the <<gcode:comments,section on comments>>.
 
-=== End of Line Marker(((End of Line Marker)))
+=== End of Line Marker
 
+(((End of Line Marker)))
 This is any combination of carriage return or line feed. 
 
 
 [[gcode:numbers]]
-=== Numbers(((Numbers)))
+=== Numbers
 
+(((Numbers)))
 The following rules are used for (explicit) numbers. In these rules a
 digit is a single character between 0 and 9.
 
@@ -195,8 +203,9 @@ which is intended to represent an integer is considered close enough if
 it is within 0.0001 of an integer value.
 
 [[sec:overview-parameters]]
-== Parameters(((Parameters)))
+== Parameters
 
+(((Parameters)))
 The RS274/NGC language supports 'parameters' - what in other
 programming languages would be called 'variables'. There are several
 types of parameter of different purpose and appearance, each described
@@ -259,8 +268,9 @@ Intended Use::
   running version. They are read-only.
 
 [[sub:numbered-parameters]]
-=== Numbered Parameters(((Numbered Parameters)))
+=== Numbered Parameters
 
+(((Parameters,numbered)))
 A numbered parameter is the pound character '#' followed by an
 integer between 1 and (currently) 5602 footnote:[The RS274/NGC interpreter
 maintains an array of numbered parameters. Its size is defined by the
@@ -388,15 +398,17 @@ is written.
 |===
 
 [[sub:subroutine-parameters]]
-=== Subroutine Parameters(((Subroutine Parameters)))
+=== Subroutine Parameters
 
+(((Subroutine Parameters)))
 * '1-30' Subroutine local parameters of call arguments. These parameters are
   local to the subroutine. Volatile. See also the chapter on
   <<cha:o-codes,O-Codes>>.
 
 [[gcode:named-parameters]]
-=== Named Parameters(((Named Parameters)))
+=== Named Parameters
 
+(((Parameters, named)))
 Named parameters work like numbered parameters but are easier to read.
 All parameter names are converted to lower case and have spaces and
 tabs removed, so '#<param>' and '#<P a R am >' refer to the same
@@ -447,8 +459,9 @@ ends, and have these  values when the program is run again.
 The <<gcode:functions,'EXISTS' function>> tests whether a given named parameter exists.
 
 [[gcode:predefined-named-parameters]]
-=== Predefined Named Parameters(((Predefined Named Parameters)))
+=== Predefined Named Parameters
 
+(((Parameters, named, predefined)))
 The following global read only named parameters are available to
 access internal state of the interpreter and machine state. They can
 be used in arbitrary expressions, for instance to control flow of the
@@ -543,8 +556,9 @@ can be added easily without changes to the source code.
 * '#<_retract_old_z>' - Return 1 if G99 is on, else 0.
 
 [[sub:system-parameters]]
-=== System Parameters(((System Parameters)))
+=== System Parameters
 
+(((System Parameters)))
 * '#<_spindle_rpm_mode>' - Return 1 if spindle rpm mode (G97) is on, else 0.
 * '#<_spindle_css_mode>' - Return 1 if constant surface speed mode (G96) is on, else 0.
 * '#<_ijk_absolute_mode>' - Return 1 if Absolute Arc distance mode (G90.1) is on, else 0.
@@ -596,8 +610,9 @@ can be added easily without changes to the source code.
   to the remap level. For debugging.
 
 [[gcode:ini-hal-params]]
-== HAL pins and INI values(((HAL pins and INI values)))
+== HAL pins and INI values
 
+(((HAL pins and INI values)))
 If enabled in the <<sub:ini:sec:rs274ngc, INI file>> G-code has access
 to the values of INI file entries and HAL pins.
 
@@ -672,8 +687,9 @@ non-mnemonic namespace and is unnecessarily cumbersome just as a
 UI/Interpreter communications mechanism.
 
 [[gcode:expressions]]
-== Expressions(((Expressions)))
+== Expressions
 
+(((Expressions)))
 An expression is a set of characters starting with a left bracket '['
 and ending with a balancing right bracket ']' . In between the brackets
 are numbers, parameter values, mathematical
@@ -683,8 +699,9 @@ is read, before anything on the line is executed. An example of an
 expression is '[1 + acos[0] - [#3 ** [4.0/2]]]'.
 
 [[gcode:binary-operators]]
-== Binary Operators(((Binary Operators)))
+== Binary Operators
 
+(((Binary Operators)))
 Binary operators only appear inside expressions. There are four basic
 mathematical operations: addition ('+'), subtraction ('-'),
 multiplication ('\*'), and division ('/'). There are three logical
@@ -710,8 +727,9 @@ The logical operations and modulus are to be performed on any real
 numbers, not just on integers. The number zero is equivalent to logical
 false, and any non-zero number is equivalent to logical true.
 
+(((Operators Precedence)))
 [[gcode:operators-precedence]]
-.Operators Precedence(((Operators Precedence)))
+.Operators Precedence
 [width="60%",options="header",cols="2*^"]
 |===
 |Operators         | Precedence
@@ -731,8 +749,9 @@ their absolute difference is less than 1e-6 (this value is defined as
 'TOLERANCE_EQUAL' in src/emc/rs274ngc/interp_internal.hh).
 
 [[gcode:functions]]
-== Functions(((Functions)))(((Unary operations)))
+== Functions
 
+(((Functions)))(((Unary operations)))
 The available functions are shown in following table. Arguments to unary
 operations which take angle measures ('COS', 'SIN', and 'TAN' ) are in
 degrees. Values returned by unary operations which return angle measures
@@ -852,8 +871,9 @@ axis words or canceling motion.
 For example, G4 (dwell) is non-modal.
 
 [[gcode:polar-coordinates]]
-== Polar Coordinates(((Polar Coordinates)))
+== Polar Coordinates
 
+(((Polar Coordinates)))
 Polar Coordinates can be used to specify the XY coordinate of a move.
 The @n is the distance and ^n is the angle. The advantage of this is
 for things like bolt hole circles which can be done very simply by
@@ -917,8 +937,9 @@ It is an error if:
 * A mix of Polar and X or Y words are used
 
 [[gcode:modal-groups]]
-== Modal Groups(((Modal Groups)))
+== Modal Groups
 
+(((Modal Groups)))
 Modal commands are arranged in sets called 'modal groups', and only
 one member of a modal group may be in force at any given time. In
 general, a modal group contains commands for which it is logically
@@ -927,8 +948,9 @@ measure in inches vs. measure in millimeters. A machining center may be
 in many modes at the same time, with one mode from each modal group
 being in effect. The modal groups are shown in the following Table.
 
+(((Modal Groups: G-codes)))
 [[cap:modal-groups]]
-.G-code Modal Groups(((Modal Groups: G-codes)))
+.G-code Modal Groups
 [width="80%",cols="4,6",options="header"]
 |===
 |Modal Group Meaning                    | Member Words
@@ -949,8 +971,9 @@ being in effect. The modal groups are shown in the following Table.
 |Lathe Diameter Mode (Group 15)         | G7, G8
 |===
 
+(((Modal Groups: M-codes)))
 [[tbl:mcodes-modal-groups]]
-.M-code Modal Groups(((Modal Groups: M-codes)))
+.M-code Modal Groups
 [width="80%",cols="4,6",options="header"]
 |===
 |Modal Group Meaning         | Member Words
@@ -986,8 +1009,9 @@ It is an error to include any unrelated words on a line with 'O-' flow
 control.
 
 [[gcode:comments]]
-== Comments(((Comments)))
+== Comments
 
+(((Comments)))
 Comments are purely informative and have no influence on machine behaviour.
 
 Comments can be added to lines of G-code to help clear up the
@@ -1024,8 +1048,9 @@ NOTE: Inline comments on O-words should not be used see the O-code
 <<ocode:comments,comments>> section for more information.
 
 [[gcode:messages]]
-== Messages(((Messages)))
+== Messages
 
+(((Messages)))
 * '(MSG,)' - displays message if 'MSG' appears after the left parenthesis
   and before any other printing characters. Variants of 'MSG' which include
   white space and lower case characters are allowed. The rest of the
@@ -1039,8 +1064,9 @@ NOTE: Inline comments on O-words should not be used see the O-code
 ----
 
 [[gcode:probe-logging]]
-== Probe Logging(((Probe Logging)))
+== Probe Logging
 
+(((Probe Logging)))
 * '(PROBEOPEN filename.txt)' - will open filename.txt and store the 9-number
   coordinate consisting of XYZABCUVW of each successful straight probe in it.
 * '(PROBECLOSE)' - will close the open probelog file.
@@ -1048,8 +1074,9 @@ NOTE: Inline comments on O-words should not be used see the O-code
 For more information on probing see the <<gcode:g38,G38>> section.
 
 [[gcode:logging]]
-== Logging(((Logging)))
+== Logging
 
+(((Logging)))
 * '(LOGOPEN,filename.txt)' - opens the named log file. If the file already
   exists, it is truncated.
 * '(LOGAPPEND,filename)' - opens the named log file. If the file already
@@ -1062,20 +1089,23 @@ Examples of logging are in 'nc_files/examples/smartprobe.ngc' and in
 'nc_files/ngcgui_lib/rectange_probe.ngc' sample G-code files.
 
 [[gcode:debug]]
-== Debug Messages(((Debug Messages)))
+== Debug Messages
 
+(((Debug Messages)))
 * '(DEBUG,)' - displays a message like '(MSG,)' with the addition of special
   handling for comment parameters as described below.
 
 [[gcode:print]]
-== Print Messages(((Print Messages)))
+== Print Messages
 
+(((Print Messages)))
 * '(PRINT,)' - messages are output to 'stderr' with special handling for
   comment parameters as described below.
 
 [[gcode:comment-parameters]]
-== Comment Parameters(((Comment Parameters)))
+== Comment Parameters
 
+(((Comment Parameters)))
 In the DEBUG, PRINT and LOG comments, the values of parameters in the
 message are expanded.
 
@@ -1115,8 +1145,9 @@ If the formatting string is created with the wrong pattern it will be
 printed as characters.
 
 [[gcode:file-requirements]]
-== File Requirements(((File Requirements)))
+== File Requirements
 
+(((File Requirements)))
 A G-code file must contain one or more lines of G-code and be terminated
 with a <<mcode:m2-m30,Program End>>. Any G-code past the program end
 is not evaluated.
@@ -1138,8 +1169,9 @@ The file must be created with a text editor like Gedit and not a word
 processor like Open Office Word Processor.
 
 [[gcode:file-size]]
-== File Size(((File Size)))
+== File Size
 
+(((File Size)))
 The interpreter and task are carefully written so that the only limit
 on part program size is disk capacity. The TkLinuxCNC and Axis interface
 both load the program text to display it to the user, though, so RAM
@@ -1150,8 +1182,9 @@ part programs. In Axis sections of the preview can be turned off using
 <<axis:preview-control,preview control>> comments.
 
 [[gcode:order-of-execution]]
-== G-code Order of Execution(((G-code Order of Execution)))
+== G-code Order of Execution
 
+(((G-code Order of Execution)))
 The order of execution of items on a line is defined not by the
 position of each item on the line, but by the following list:
 
@@ -1185,8 +1218,9 @@ position of each item on the line, but by the following list:
 * Stop (M0, M1, M2, M30, M60).
 
 [[gcode:best-practices]]
-== G-code Best Practices(((G-code Best Practices)))
+== G-code Best Practices
 
+(((G-code Best Practices)))
 .Use an appropriate decimal precision
 Use at least 3 digits after the decimal when milling in millimeters,
 and at least 4 digits after the decimal when milling in inches.
