--- a/docs/src/getting-started/running-linuxcnc.adoc
+++ b/docs/src/getting-started/running-linuxcnc.adoc
@@ -2,17 +2,19 @@
 :toc:
 
 [[cha:running-emc]]
-= Running LinuxCNC(((Running LinuxCNC)))
+= Running LinuxCNC
 
 == Invoking LinuxCNC
 
+(((Running LinuxCNC)))
 After installation, LinuxCNC starts just like any other Linux program:
 run it from the <<faq:terminal,terminal>> by issuing the command 'linuxcnc',
 or select it in the 'Applications -> CNC' menu.
 
 [[sec:config-launcher]]
-== Configuration Launcher(((Configuration Launcher)))
+== Configuration Launcher
 
+(((Configuration Launcher)))
 When starting LinuxCNC (from the CNC menu or from the command line without
 specifying an INI file) the Configuration Selector dialog starts.
 
