--- a/docs/src/getting-started/system-requirements.adoc
+++ b/docs/src/getting-started/system-requirements.adoc
@@ -2,10 +2,11 @@
 :toc:
 
 [[cha:system-requirements]]
-= System Requirements(((System Requirements)))
+= System Requirements
 
 == Minimum Requirements
 
+(((System Requirements)))
 The minimum system to run LinuxCNC and Debian / Ubuntu may vary depending
 on the exact usage. Stepper systems in general require faster threads to
 generate step pulses than servo systems. You can use the Live CD to test
