--- a/docs/src/hal/comp.adoc
+++ b/docs/src/hal/comp.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:hal-component-generator]]
-= HAL Component Generator(((HAL Component Generator)))
+= HAL Component Generator
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -10,8 +10,7 @@
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
 
-== Introduction
-
+(((HAL,Component Generator)))
 This section introduces to the compilation HAL components, i.e. the addition of some machinists' knowledge on how to deal with the machine.
 It should be noted that such components do not necessarily deal with the hardware directly.
 They often do, but not necessarily, e.g. there could be a component to convert between imperial and metric scales,
