--- a/docs/src/hal/halui-examples.adoc
+++ b/docs/src/hal/halui-examples.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:halui-examples]]
-= Halui Examples(((Halui Examples)))
+= Halui Examples
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -10,6 +10,7 @@
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
 
+(((Halui Examples)))
 For any Halui examples to work you need to add the following line to the [HAL]
 section of the ini file.
 
