--- a/docs/src/motion/5-axis-kinematics.adoc
+++ b/docs/src/motion/5-axis-kinematics.adoc
@@ -6,7 +6,7 @@ use image:: for equation png files -- no latexmath
 ////////////////////////////////////////////////
 
 [[cha:5-axis-kinematics]]
-= 5-Axis Kinematics(((5-Axis Kinematics)))
+= 5-Axis Kinematics
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -16,6 +16,7 @@ use image:: for equation png files -- no latexmath
 
 == Introduction
 
+(((5-Axis Kinematics)))
 Coordinated multi-axis CNC machine tools controlled with LinuxCNC, require a special kinematics component for each type of machine. This chapter describes some of the most popular 5-axis machine configurations and then develops the forward (from work to joint coordinates) and inverse (from joint to work) transformations in a general mathematical process for two types of machine.
 
 The kinematics components are given as well as vismach simulation models to demonstrate their behaviour on a computer screen. Examples of HAL file data are also given.
