--- a/docs/src/user/user-concepts.adoc
+++ b/docs/src/user/user-concepts.adoc
@@ -2,7 +2,7 @@
 :toc:
 
 [[cha:important-user-concepts]]
-= Important User Concepts(((User Concepts)))
+= Important User Concepts
 
 // Custom lang highlight
 // must come after the doc title, to work around a bug in asciidoc 8.6.6
@@ -10,14 +10,18 @@
 :hal: {basebackend@docbook:'':hal}
 :ngc: {basebackend@docbook:'':ngc}
 
+(((User Concepts)))
 This chapter covers important user concepts that should be understood before attempting to run a CNC machine with G-code.
 
 [[sec:trajectory-control]]
-== Trajectory Control(((Trajectory Control)))
+== Trajectory Control
+
+(((Trajectory Control)))
 
 [[sub:trajectory-planning]]
-=== Trajectory Planning(((Trajectory Planning,TP)))
+=== Trajectory Planning
 
+(((Trajectory Planning,TP)))
 Trajectory planning, in general, is the means by which LinuxCNC follows the path specified by your G-code program, while still operating within the limits of your machinery.
 
 A G-code program can never be fully obeyed.
@@ -38,8 +42,9 @@ In the INI file the specified machine constraints, such as maximum axis velocity
 For more information on the Trajectory Planner INI options see the <<sub:ini:sec:traj,Trajectory Section>> in the INI chapter.
 
 [[sub:path-following]]
-=== Path Following(((Trajectory Planning:Path Following)))
+=== Path Following
 
+(((Trajectory Planning:Path Following)))
 A less straightforward problem is that of path following.
 When you program a corner in G-code, the trajectory planner can do several things,
 all of which are right in some cases:
@@ -55,8 +60,9 @@ Rapid moves also obey the current trajectory control.
 With moves long enough to reach maximum velocity on a machine with low acceleration and no path tolerance specified, you can get a fairly round corner.
 
 [[sub:programming-the-planner]]
-=== Programming the Planner(((Trajectory Planning:Programming the Planner)))
+=== Programming the Planner
 
+(((Trajectory Planning:Programming the Planner)))
 The trajectory control commands are as follows:
 
 `G61`:: (Exact Path Mode) `G61` visits the programmed point exactly,
@@ -114,8 +120,9 @@ The bottom plot shows the effect of the Naive Cam Detector to combine the moves 
 image::images/naive-cam.png["Naive CAM Detector",align="center"]
 
 [[sub:planning-moves]]
-=== Planning Moves(((Trajectory Planning:Planning Moves)))
+=== Planning Moves
 
+(((Trajectory Planning:Planning Moves)))
 Make sure moves are 'long enough' to suit your machine/material.
 Principally because of the rule that the machine will never move at such a speed that it cannot come to a complete stop at the end of the current movement,
 there is a minimum movement length that will allow the machine to keep up a requested feed rate with a given acceleration setting.
@@ -150,10 +157,11 @@ For a feed rate of 0.5 inch per second, the critical distance is latexmath:[$ \f
 ////
 
 [[sec:g-code]]
-== G-code(((G-code)))
+== G-code
 
 === Defaults
 
+(((G-code)))
 When LinuxCNC first starts up many G- and M-codes are loaded by default.
 The current active G- and M-codes can be viewed on the MDI tab in the 'Active G-codes:' window in the AXIS interface.
 These G- and M-codes define the behavior of LinuxCNC and
